finished layout for mobile

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <header>
+        <a href="index.html">
+            <h1 id="logo">The Antikythera mechanism</h1>
+        </a>
         <nav>
             <a href="index.html" class="active">Home</a>
             <a href="gallery.html">Gallery</a>
@@ -36,7 +39,7 @@
         </p>
     </div>
     <div class="fragments">
-        <img src="assets/images/Antikythera mechanism fragments.webp" alt="Antikythera mechanism in fragments">
+        <img src="assets/images/Antikythera mechanism fragments.webp" id="image" alt="Antikythera mechanism in fragments">
     </div>
     <div class="origin">
         <h3>The origin</h3>
