--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1 id="logo">The Antikythera mechanism</h1>
         </a>
         <nav>
-            <a href="index.html" class="active">Home</a>
+            <a href="index.html">Home</a>
             <a href="gallery.html">Gallery</a>
             <a href="signup.html">Sign Up</a>
         </nav>
@@ -22,7 +22,8 @@
     <div class="cover-text">
         <h1>The Antikythera mechanism</h1>
     </div>
-    <div class="mechanism">
+    <div class="mechanism"> 
+        <div>
         <h2>The mechanism</h2>
         <p class="main-text">The Antikythera mechanism is an Ancient Greek hand-powered orrery (model of the Solar System). 
             It is the oldest known example of an analogue computer. 
@@ -37,6 +38,7 @@
             All these fragments of the mechanism are kept at the National Archaeological Museum, Athens, along with reconstructions and replicas, 
             to demonstrate how it may have looked and worked.
         </p>
+    </div>
     </div>
     <div class="fragments">
         <img src="assets/images/Antikythera mechanism fragments.webp" id="image" alt="Antikythera mechanism in fragments">
