--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,7 @@
             <input type="text" id="last-name" name="last-name" required><br>
             <label for="email">Email:</label><br>
             <input type="email" name="email" id="email" required><br>
-            <button type="submit" class="signup">Sign Up!</button>
+            <button type="submit" class="signup-btn">Sign Up!</button>
         </form>
     </div>
     </main>
