fixed image name

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </p>
     </div>
     <div class="fragments">
-        <img src="assets/images/Antikythera mechanism fragments.webp" id="image" alt="Antikythera mechanism in fragments">
+        <img src="assets/images/Antikythera-mechanism-fragments.webp" id="image" alt="Antikythera mechanism in fragments">
     </div>
     <div class="origin">
         <h3>The origin</h3>
