Added comments to the project and fixed the css path

--- a/signup.html
+++ b/signup.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Title -->
     <title>Sign Up</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
+    <!-- Header -->
     <header>
         <a href="index.html">
             <h1 id="logo">The Antikythera mechanism</h1>
         </a>
+        <!-- Nvigation -->
         <nav>
             <a href="index.html">Home</a>
             <a href="gallery.html">Gallery</a>
             <a href="signup.html">Sign Up</a>
         </nav>
     </header>
+
+    <!-- Main content-->
     <main>
+        <!-- Sign up form-->
         <div class="signup">
         <form action="https://formdump.codeinstitute.net" method="post">
             <h1>Sing Up!</h1>
@@ -32,11 +41,13 @@
     </div>
     </main>
 
+    <!-- Footer -->    
     <footer>
         <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="visit our Facebook page"><i class="fa-brands fa-facebook"></i></a>
         <a href="https://x.com/" target="_blank" rel="noopener" aria-label="visit our X page"><i class="fa-brands fa-square-x-twitter"></i></a>
         <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our Instagram page"><i class="fa-brands fa-instagram"></i></a>
     </footer>
+    <!-- Font awesome kit-->
     <script src="https://kit.fontawesome.com/39ed827bee.js" crossorigin="anonymous"></script>
 </body>
 </html>
