--- a/gallery.html
+++ b/gallery.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Title -->
     <title>Gallery</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
+    <!-- Header -->
     <header>
         <a href="index.html">
             <h1 id="logo">The Antikythera mechanism</h1>
         </a>
+        <!-- Navigation -->
         <nav>
             <a href="index.html">Home</a>
             <a href="gallery.html">Gallery</a>
@@ -18,7 +24,9 @@
         </nav>
     </header>
 
+    <!-- Main content -->
     <main>
+        <!-- Gallery section-->
         <div class="gallery">
             <div class="pictures">
                 <img src="assets/images/Antikythera_mechanism1.webp" alt="antikythera mechanism with green petina">
@@ -32,12 +40,13 @@
         </div>
     </main>
 
-
+    <!-- Footer -->
     <footer>
         <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="visit our Facebook page"><i class="fa-brands fa-facebook"></i></a>
         <a href="https://x.com/" target="_blank" rel="noopener" aria-label="visit our X page"><i class="fa-brands fa-square-x-twitter"></i></a>
         <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our Instagram page"><i class="fa-brands fa-instagram"></i></a>
     </footer>
+    <!-- Font awesome kit -->
     <script src="https://kit.fontawesome.com/39ed827bee.js" crossorigin="anonymous"></script>
 </body>
 </html>
