--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Title -->
     <title>The Antikythera mechanism</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
+
 <body>
+    <!-- Header -->
     <header>
         <a href="index.html">
             <h1 id="logo">The Antikythera mechanism</h1>
         </a>
+        <!-- Navigation -->
         <nav>
             <a href="index.html">Home</a>
             <a href="gallery.html">Gallery</a>
             <a href="signup.html">Sign Up</a>
         </nav>
     </header>
+
+<!-- Main content -->    
 <main>
+    <!-- Hero image -->
 <div class="container">
     <div class="cover-text">
         <h1>The Antikythera mechanism</h1>
     </div>
+    <!-- Mechanism section -->
     <div class="mechanism"> 
         <h2>The mechanism</h2>
         <p class="main-text">The Antikythera mechanism is an Ancient Greek hand-powered orrery (model of the Solar System). 
@@ -41,6 +53,7 @@
     <div class="fragments">
         <img src="assets/images/Antikythera-mechanism-fragments.webp" id="image" alt="Antikythera mechanism in fragments">
     </div>
+    <!-- Origin section -->
     <div class="origin">
         <h3>The origin</h3>
         <p class="main-text">The Antikythera mechanism is generally referred to as the first known analogue computer. 
@@ -56,11 +69,14 @@
 </div>
 </main>
 
+<!-- Footer -->
 <footer>
     <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="visit our Facebook page"><i class="fa-brands fa-facebook"></i></a>
     <a href="https://x.com/" target="_blank" rel="noopener" aria-label="visit our X page"><i class="fa-brands fa-square-x-twitter"></i></a>
     <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our Instagram page"><i class="fa-brands fa-instagram"></i></a>
 </footer>
+
+<!-- Font awesome kit -->
 <script src="https://kit.fontawesome.com/39ed827bee.js" crossorigin="anonymous"></script>
 </body>
 </html>
